--- a/css/styles.css
+++ b/css/styles.css
@@ -43,9 +43,20 @@ h1 {
     color: black;
     font-size: 20px;
 }
-.services{
+
+.services {
+    text-align: center;
     position: absolute;
     top: 200%;
     left: 50%;
-    color: whitesmoke; 
+    transform: translate(-50%, -50%);
+    color: whitesmoke;    
 }
+.what {
+    text-align: center;
+    color: black;
+}
+#design {
+    padding: 30px;
+}
+
