--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ h1 {
 .services {
     text-align: center;
     position: absolute;
-    top: 200%;
+    top: 195%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: whitesmoke;    
@@ -55,22 +55,69 @@ h1 {
 .what {
     text-align: center;
     color: black;
+    padding: 20px;
 }
-#design {
+/* #design {
     padding: 90px;
+    position: absolute;
+    top: 220%;
+    left: 20%;
     float: left;
 }
 
 #dev {
     padding:90px;
-    /* float: left; */
-    /* position: absolute; */
-    top: 245%;
-    left: 100%;
-
-    
+    position: absolute;
+    top: 220%;
+    left: 42%;    
 }
 
-.float {
-    float: left;
+#product {
+    padding: 75px;
+    position: absolute;
+    top: 220%;
+    left:65%;
+}
+
+.click1>p {
+    position: absolute;
+    top: 244%;
+    left: 27%;
+    font-size: 10px;
+}
+.click2>p {
+    position: absolute;
+    top: 243%;
+    left: 48%;  
+    font-size: 10px; 
+}
+.click3>p {
+    position: absolute;
+    top: 243%;
+    left: 68%;  
+    font-size: 10px;    
+}
+#peach {
+    display:none;
+    text-align: center;
+} */
+
+
+.formation {
+    padding-top: 30px;
+    margin-left: 20px;
+    margin-right: 20px
+}
+/* .caption {
+    font-size: 12px;
+} */
+
+#peach {
+ display: none;
+ cursor: pointer;
+}
+
+.logos {
+    margin-left: 205px;
+    cursor: pointer;
 }
