--- a/css/styles.css
+++ b/css/styles.css
@@ -52,72 +52,36 @@ h1 {
     transform: translate(-50%, -50%);
     color: whitesmoke;    
 }
-.what {
-    text-align: center;
-    color: black;
-    padding: 20px;
-}
-/* #design {
-    padding: 90px;
-    position: absolute;
-    top: 220%;
-    left: 20%;
-    float: left;
-}
-
-#dev {
-    padding:90px;
-    position: absolute;
-    top: 220%;
-    left: 42%;    
-}
-
-#product {
-    padding: 75px;
-    position: absolute;
-    top: 220%;
-    left:65%;
-}
-
-.click1>p {
-    position: absolute;
-    top: 244%;
-    left: 27%;
-    font-size: 10px;
-}
-.click2>p {
-    position: absolute;
-    top: 243%;
-    left: 48%;  
-    font-size: 10px; 
-}
-.click3>p {
-    position: absolute;
-    top: 243%;
-    left: 68%;  
-    font-size: 10px;    
-}
-#peach {
-    display:none;
-    text-align: center;
-} */
-
 
 .formation {
     padding-top: 30px;
-    margin-left: 20px;
-    margin-right: 20px
-}
-/* .caption {
-    font-size: 12px;
-} */
-
-#peach {
- display: none;
- cursor: pointer;
 }
 
-.logos {
-    margin-left: 205px;
+.what {
+    text-align: center;
+    color: black;
+    padding: 30px;
+}
+
+#peach, 
+#peach1, 
+#peach2 {
+    display: none;
     cursor: pointer;
+}
+
+.logos,
+.devs,
+.product {
+    cursor: pointer;
+    text-align: center;
+    padding: 10px;
+}
+
+.portfolio {
+    text-align: center;
+}
+
+.part5 {
+    padding:20px;
 }
