--- a/css/styles.css
+++ b/css/styles.css
@@ -85,3 +85,32 @@ h1 {
 .part5 {
     padding:20px;
 }
+
+.hoverable {
+	display:none;
+	position:absolute;
+    border:3.5px solid whitesmoke;
+    background: transparent;
+    margin-top: -12em;
+    margin-left: 1em;
+	border-radius:0px;
+	padding: 70px;
+    color:white;
+}
+.part6{
+    padding-top: 20px; 
+}
+
+.bg-img {
+    background-image: url("https://github.com/jonnygovish/IP3/blob/master/assets/backgrounds/c_image.jpg")
+    background-size: cover;
+}
+
+.contacts {
+    text-align: center;
+    position: absolute;
+    top: 350%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: whitesmoke;       
+}
