--- a/css/styles.css
+++ b/css/styles.css
@@ -101,11 +101,6 @@ h1 {
     padding-top: 20px; 
 }
 
-.bg-img {
-    background-image: url("https://github.com/jonnygovish/IP3/blob/master/assets/backgrounds/c_image.jpg")
-    background-size: cover;
-}
-
 .contacts {
     text-align: center;
     position: absolute;
@@ -113,4 +108,15 @@ h1 {
     left: 50%;
     transform: translate(-50%, -50%);
     color: whitesmoke;       
+}
+.first-name {
+    text-align: center;
+    margin-top: -27em;
+    margin-left: 20em;
+    width: 950px;
+    color:whitesmoke;
+}
+
+.thick {
+    border: solid white;
 }
