--- a/css/styles.css
+++ b/css/styles.css
@@ -117,10 +117,6 @@ h1 {
     color:whitesmoke;
 }
 
-.thick {
-    border: solid white;
-}
-
 .message {
     padding-left: 321px;
 
@@ -137,4 +133,16 @@ h1 {
 
 ::placeholder{
     color: white;
+}
+
+@media screen and (min-width: 480px) {
+    body {
+        background-color: black;
+        color: white;
+    }
+}
+@media screen and (min-width: 768px) {
+  body {
+    background-color:transparent;
+  }
 }
